Changed css style of div.page to fix mobile view
With margin-left:-25px, mobile view looks out of the screen.

--- a/css/design.less
+++ b/css/design.less
@@ -276,7 +276,7 @@ form.search {
     margin-bottom: .5em;
     overflow: hidden;
     word-wrap: break-word;
-    margin-left: -25px;
+    margin-left: 0px;
 }
 
 .dokuwiki .docInfo {
